# language-model-gateway

./: .aikido  .aikido.yml  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CACHING.md  Dockerfile  IMAGE_GENERATION_SETUP.md  MCP_INTEGRATION.md  Makefile  Pipfile  README.md  docker-compose-aspire.yml  docker-compose-embedding.yml  docker-compose-fhir.yml  docker-compose-integration.yml  docker-compose-keycloak.yml  docker-compose-llm.yml  docker-compose-mcp-fhir-agent.yml  docker-compose-mcp-inspector.yml  docker-compose-mcp-server-gateway.yml  docker-compose-mongo.yml  docker-compose-openwebui-auth.yml  docker-compose-openwebui-ssl.yml  docker-compose-openwebui.yml  docker-compose-otel.yml  docker-compose.services.observability.yml  docker-compose.yml  docker.env.example  inspector.Dockerfile  pre-commit-hook  pre-commit.Dockerfile  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: build_and_test.yml  codeql.yml  deploy.yml  docker-publish.yml
adrs/: 0001-structlog-for-json-log-rendering.md
caches/ollama/: readme.md
caches/openai_models/: readme.md
docs/: coding_model_router.md  model_routing_guide.md
docs/superpowers/plans/: 2026-07-12-account-directory.md  2026-07-12-model-routing-token-optimization.md  2026-07-13-bedrock-mantle-prompt-caching-spike.md  2026-07-13-native-bedrock-transport.md  (+1 more)
keycloak-config/: keycloak-init.Dockerfile  keycloak_config.py  realm-import.json
language-model-gateway-configs/: model-router-config.json
language-model-gateway-configs/chat_completions/: .mcp.json
language-model-gateway-configs/mcp/: .mcp.json
language_model_gateway/: config_schema.json
language_model_gateway/configs/: config_schema.json  config_schema.py
language_model_gateway/container/: container_factory.py  simple_container.py  skill_loader_mcp_adapter.py
language_model_gateway/gateway/: api.py  api_container.py  oidc_pkce_auth.py
language_model_gateway/static/: app_login.html  app_token.html  auth_redirect_callback.html  auth_success.html  claude_code_statusline.py  credential_capture.html  skill_publish.html  token_saved.html
language_model_gateway/utilities/: mongo_url_utils.py
mcp/math_server/: math_server.Dockerfile  math_server.py
mcp_servers/google_search/: google_search.Dockerfile  google_search.py
mcp_servers/math_server/: math_server.py
mcp_servers/provider_search/: provider_search.Dockerfile  provider_search.py
mcp_servers/url_to_markdown/: url_to_markdown.Dockerfile  url_to_markdown.py
observability/: otel-collector-config.yaml  trace.json
openwebui-config/functions/: configure_openai_connection.py  insert_function_to_db.py  language_model_gateway_pipe.json  language_model_gateway_pipe.py  open-webui.Dockerfile  readme.md
openwebui_functions/: import_pipe.py  language_model_gateway_pipe.json  language_model_gateway_pipe.py  open-webui.Dockerfile  openai.json  openai.py  readme.md
outputs/tools/: readme.md
scripts/: claude_code_statusline.py  download_model.py  prompt_caching_spike.py  wait-for-healthy.sh
tests/: common.py  conftest.py  test_fhir_server_mcp_agent_search_with_dcr.py
tests/auth/: keycloak_helper.py
tests/end_to_end/: test_ai_agent.py  test_google_drive_agent.py  test_google_workspace_agent.py  test_mcp_agent.py
tests/gateway/: test_chat.py  test_chat_anthropic.py  test_chat_anthropic_image_download.py  test_chat_anthropic_image_generation.py  test_chat_anthropic_streaming.py  test_chat_anthropic_with_google_search.py  test_chat_anthropic_with_pdf_scraping.py  test_chat_anthropic_with_web_scraping.py  test_chat_anthropic_with_web_search.py  test_chat_b_well.py  test_chat_bailey_streaming.py  test_chat_openai.py  test_chat_openai_streaming.py  test_chat_prompt_helper.py  test_chat_streaming.py  test_mcp.py  test_models.py  test_openai_responses.py  test_openai_responses_streaming.py  test_streaming_manager.py  test_token_verifier.py
tests/scripts/: test_claude_code_statusline.py
tests_integration/: test_aiden_api.py
(+1023 files in other folders)
